--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>com.github.almasb</groupId>
             <artifactId>fxgl</artifactId>
-            <version>21</version>
+            <version>21.1</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -78,8 +78,8 @@
                     <noHeaderFiles>true</noHeaderFiles>
                     <noManPages>true</noManPages>
                     <launcher>Start-game</launcher>
-                    <jlinkImageName>MineSweeper</jlinkImageName>
-                    <jlinkZipName>MineSweeper</jlinkZipName>
+                    <jlinkImageName>mineSweeper</jlinkImageName>
+                    <jlinkZipName>mineSweeperZip</jlinkZipName>
                     <mainClass>com.oliverbos1.minesweeper.MineSweeperApp</mainClass>
                 </configuration>
             </plugin>
